<resources>
    <string name="app_name">New Shoes</string>
    <string name="new_shoes">New Shoes</string>
    <string name="add_shoe">New Shoe</string>
    <string name="add_new_shoe_text">Add New Shoe</string>
    <string name="enter_shoe_name">Enter shoe name:</string>
    <string name="enter_desired_distance_text">Enter desired distance in miles:</string>
    <string name="add_shoe_button_text">Add Shoe</string>
    <string name="choose_shoe_button">Choose Shoe</string>
    <string name="choose_shoe_text">Choose Shoe</string>
    <string name="choose_shoe_spinner">Choose Shoe</string>
    <string name="start_run_button">Start Run</string>
    <string name="start_run_welcome_string">Start Run</string>
    <string name="delete_shoe">Delete Shoe</string>
    <string name="edit_shoe_welcome">Edit Shoe</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_desired_distance_text">Edit Desired Distance:</string>
    <string name="edit_shoe_name_text">Edit Shoe Name Text:</string>
    <string name="manually_enter_miles">Manually Enter Miles:</string>
    <string name="progress_bar_start_text">0</string>
    <string name="shoe_emoji">\uD83D\uDC5F;</string>
    <string name="recommended_300_500_mi">Recommended 300-500 mi</string>
    <string name="ex_nike_reebok_adidas">Ex: Nike, Reebok, Adidas</string>
    <string name="its_cool_we_all_forget_things">Its cool, we all forget things</string>
    <string name="ex_nike_reebok_adidas">Ex: Nike, Reebok, Adidas</string>
    <string name="go">Go!</string>
    <string name="end_run">End Run</string>
    <string name="pause_run">Pause Run</string>
</resources>
