<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightModeBackgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_shoes"
        android:textSize="52sp"
        android:textStyle="bold"
        android:textColor="@color/lightModeTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_shoe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@color/lightModeTextColor"
        android:text="@string/add_shoe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="newShoe"/>


    <TextView
        android:id="@+id/choose_shoe_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/choose_shoe_text"
        android:textColor="@color/lightModeTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/new_shoe_button"
        app:layout_constraintRight_toLeftOf="@+id/start_run_button"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"/>

    <Spinner
        android:id="@+id/choose_shoe_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_shoe_text"/>

    <Button
        android:id="@+id/start_run_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@color/lightModeTextColor"
        android:text="@string/start_run_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        android:onClick="startRun"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_shoe_button"
        app:layout_constraintTop_toBottomOf="@id/edit_shoe_button"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="12dp"
        android:background="@color/tertiaryColorAccent"
        android:text="@string/delete_shoe"
        android:onClick="deleteShoe"
        android:longClickable="true"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_shoe_button"
        app:layout_constraintTop_toBottomOf="@id/choose_shoe_spinner"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:background="@color/secondaryColorAccent"
        android:text="@string/edit_shoe_welcome"
        android:onClick="editShoe"/>


</androidx.constraintlayout.widget.ConstraintLayout>