<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".EditShoe">

    <TextView
        android:id="@+id/edit_shoe_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_shoe_welcome"
        android:textSize="52dp"
        android:textStyle="bold"
        android:textColor="@color/titleColorTest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/edit_shoe_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/edit_shoe_name_text"
        android:textColor="@color/titleColorTest"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_shoe_welcome_text"/>

    <EditText
        android:id="@+id/edit_shoe_name_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/titleColorTest"
        android:textSize="30dp"
        android:width="400dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_shoe_name_text" />

    <TextView
        android:id="@+id/edit_desired_distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/edit_desired_distance_text"
        android:textColor="@color/titleColorTest"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_shoe_name_text_field" />

    <EditText
        android:id="@+id/edit_desired_distance_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/titleColorTest"
        android:textSize="30dp"
        android:width="400dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_desired_distance_text" />

    <TextView
        android:id="@+id/manually_enter_miles_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/manually_enter_miles"
        android:textColor="@color/titleColorTest"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_desired_distance_text_field" />

    <EditText
        android:id="@+id/manually_enter_miles_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/titleColorTest"
        android:textSize="30dp"
        android:width="400dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manually_enter_miles_text" />

    <Button
        android:id="@+id/add_shoe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/manually_enter_miles_text_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:background="@color/titleColorTest"
        android:text="@string/save_changes"
        android:onClick="saveChanges"/>

</androidx.constraintlayout.widget.ConstraintLayout>