<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".AddShoeActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_new_shoe_text"
        android:textSize="52dp"
        android:textStyle="bold"
        android:textColor="@color/titleColorTest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/enter_shoe_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:text="@string/enter_shoe_name"
        android:textColor="@color/titleColorTest"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <EditText
        android:id="@+id/shoe_name_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/titleColorTest"
        android:textSize="30dp"
        android:width="400dp"
        android:hint="Ex: Nike, Reebok, Adidas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_shoe_name_text" />

    <TextView
        android:id="@+id/desired_distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:text="@string/enter_desired_distance_text"
        android:textColor="@color/titleColorTest"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shoe_name_text_field" />

    <EditText
        android:id="@+id/desired_distance_text_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/titleColorTest"
        android:textSize="30dp"
        android:width="400dp"
        android:inputType="numberDecimal"
        android:hint="Recommended 500-800 mi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desired_distance_text" />

    <Button
        android:id="@+id/add_shoe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/desired_distance_text_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:background="@color/titleColorTest"
        android:text="@string/add_shoe_button_text"
        android:onClick="addShoe"/>

</androidx.constraintlayout.widget.ConstraintLayout>